[workspace]
resolver = "2"
members = [
    "uasset_utils",
]

[workspace.package]
repository = "https://github.com/trumank/uasset_utils"
authors = [ "trumank" ]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.68"
unreal_asset = { git = "https://github.com/trumank/unrealmodding", package = "unreal_asset", branch = "patches" }

[patch."https://github.com/trumank/unrealmodding"]
unreal_asset = { path = "../unrealmodding/unreal_asset" }
